Updates for JDK18 compatibility