@@ -82,7 +82,7 @@
     <daVersion>2.1.0</daVersion>
     <galleyVersion>0.16.6</galleyVersion>
 
-    <groovyVersion>3.0.8</groovyVersion>
+    <groovyVersion>3.0.10</groovyVersion>
     <unirestVersion>3.11.10</unirestVersion>
     <jsonPathVersion>2.3.0</jsonPathVersion>
     <slf4jVersion>1.7.30</slf4jVersion>
@@ -94,6 +94,7 @@
     <jacksonJavadocVersion>2.12</jacksonJavadocVersion>
 
     <argLine />
+    <surefireSecurityManager />
   </properties>
 
 
@@ -493,7 +494,7 @@
       <dependency>
         <groupId>org.jboss.byteman</groupId>
         <artifactId>byteman-bmunit</artifactId>
-        <version>4.0.15</version>
+        <version>4.0.18</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -572,7 +573,7 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
-            <argLine>@{argLine} -Djdk.attach.allowAttachSelf -Dorg.jboss.byteman.transform.all=true</argLine>
+            <argLine>@{argLine} -Djdk.attach.allowAttachSelf -Dorg.jboss.byteman.transform.all=true ${surefireSecurityManager}</argLine>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
             <additionalClasspathElements>
               <additionalClasspathElement>${java.home}/../lib/tools.jar</additionalClasspathElement>
@@ -613,7 +614,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.7</version>
+          <version>0.8.8</version>
         </plugin>
         <plugin>
           <groupId>org.bsc.maven</groupId>
@@ -780,4 +781,17 @@
     <module>integration-test</module>
     <module>coverage-reporting</module>
   </modules>
+
+
+  <profiles>
+    <profile>
+      <activation>
+        <jdk>[18,]</jdk>
+      </activation>
+      <properties>
+        <!-- Security manager under JDK18 causes issues: https://github.com/stefanbirkner/system-rules/issues/85 -->
+        <surefireSucurityManager>-Djava.security.manager=allow</surefireSucurityManager>
+      </properties>
+    </profile>
+  </profiles>
 </project>
